# mind-palace

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
assets/: generate_banner.py
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/migrations/: 001_init.sql
backend/mind_palace/: config.py  database.py  main.py  middleware.py
backend/mind_palace/api/: agents.py  attachments.py  collections.py  entities.py  graph.py  ingest.py  links.py  objects.py  proposals.py  search.py  tasks.py
backend/mind_palace/auth/: middleware.py
backend/mind_palace/mcp/: server.py
backend/mind_palace/models/: __init__.py  agent.py  agent_permission.py  attachment.py  chunk.py  collection.py  entity.py  ingestion_event.py  ingestion_task.py  object.py  proposal.py
backend/mind_palace/schemas/: agent.py  collection.py  ingestion.py  object.py  proposal.py
backend/mind_palace/services/: graph_svc.py  inference.py  markitdown_svc.py  search_svc.py
backend/mind_palace/worker/: runner.py
docker/: postgres.Dockerfile
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MCP.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: EntityInput.tsx  ErrorBoundary.tsx  ImportanceRating.tsx  IngestModal.tsx  Layout.tsx  Markdown.tsx  Mermaid.tsx  NewObjectModal.tsx
(+34 files in other folders)
